--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@huzaifaali57/cli-to-do-list",
   "version": "1.1.0",
-  "description": "Creating a CLI based To Do List program in Typescript having Functionalities like Add, Delete, Update and Exit from the List",
+  "description": "Creating a CLI based To Do List program in Typescript having functionalities like Add, Delete, Update and Exit from the List",
   "main": "index.js",
   "type": "module",
   "publishConfig": {
